--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hejsan</h1>
+    <h1>Team-Ice</h1>
+    <table>
+      
+<tr>
+    
+    <th>Johan</th>
+    <th>Vigor</th>
+    <th>Lawe</th>
+</tr>
+
+    </table>
 </body>
+<style>
+body{
+    background-color:cornsilk;
+}
+
+h1{
+    text-align: center;
+}
+
+table {
+    width: 100%;
+    height: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+th{
+    width: 33%;
+    font-size: 50px;
+}
+
+
+</style>
 </html>
