--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel ="stylesheet" href ="index.css">
 </head>
 <body>
     <h1>Team-Ice</h1>
@@ -12,7 +13,7 @@
       
 <tr>
     
-    <th>Johan</th>
+    <th><a href ="https://serene-plains-54676.herokuapp.com/">Johan</a></th>
     <th>Vigor</th>
     <th>Lawe</th>
 </tr>
@@ -20,25 +21,6 @@
     </table>
 </body>
 <style>
-body{
-    background-color:cornsilk;
-}
-
-h1{
-    text-align: center;
-}
-
-table {
-    width: 100%;
-    height: 200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-th{
-    width: 33%;
-    font-size: 50px;
-}
 
 
 </style>
