all the names have a server

--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel ="stylesheet" href ="index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
     <h1>Team-Ice</h1>
     <table>
-      
-<tr>
-    
-    <th><a href ="https://serene-plains-54676.herokuapp.com/">Johan</a></th>
-    <th>Vigor</th>
-    <th>Lawe</th>
-</tr>
-
+        <tr>
+            <th><a href="https://serene-plains-54676.herokuapp.com/">Johan</a></th>
+            <th><a href="https://desolate-tor-71624.herokuapp.com/">Vigor</a></th>
+            <th><a href ="https://stark-beach-02554.herokuapp.com/">Lawe</a></th>
+        </tr>
     </table>
 </body>
-<style>
 
-
-</style>
 </html>
