Johan image in place

--- a/index.html
+++ b/index.html
@@ -10,14 +10,26 @@
 </head>
 
 <body>
-    <h1>Team-Ice</h1>
-    <table>
-        <tr>
-            <th><a href="https://serene-plains-54676.herokuapp.com/">Johan</a></th>
-            <th><a href="https://desolate-tor-71624.herokuapp.com/">Vigor</a></th>
-            <th><a href ="https://stark-beach-02554.herokuapp.com/">Lawe</a></th>
-        </tr>
-    </table>
+    <h1>Team-ICE</h1>
+    <img class="logo" src ="Ice-logo.jpg">
+    
+    <div class="row">
+        <div class="column">
+          <img src="johan.jpg" alt="Snow" style="width:100%">
+          <a href="https://serene-plains-54676.herokuapp.com/">Johan</a>
+        </div>
+        <div class="column">
+          <img src="hejhej.jpg" alt="Forest" style="width:100%">
+          <a href="https://desolate-tor-71624.herokuapp.com/">Vigor</a>
+        </div>
+        <div class="column">
+          <img src="Ice-logo.jpg" alt="Mountains" style="width:100%">
+          <a href="https://stark-beach-02554.herokuapp.com/">Lawe</a>
+        </div>
+      </div>
+ 
+    <div class ="about">Om oss</div>
+    <div class ="AboutInfo">Vi är grupp på tre som</div>
 </body>
 
 </html>
