images and text for the profiles are done

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <img src="selfie.jpg" alt="Johan" style="width:100%">
             <div class="container">
               <h2>Johan Klausen</h2>
-              <p class="title">CEO & Founder</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p class="title">The oldest</p>
+              <p></p>
               <p>klausenjohan23@gmail.com</p>
               <a class ="button" href ="https://serene-plains-54676.herokuapp.com/">MyProfile</a>
               <p></p>
@@ -36,8 +36,8 @@
            
             <div class="container">
               <h2>Vigor Lundkvist</h2>
-              <p class="title">Art Director</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p class="title">The smartest</p>
+              <p></p>
               <p>vigor.lunkvist@live.se</p>
               <a class ="button" href ="https://desolate-tor-71624.herokuapp.com/">MyProfile</a>
               <p></p>
@@ -50,8 +50,8 @@
             <img src="lawe.jpg" alt="John" style="width:100%">
             <div class="container">
               <h2>Lawe Zangena</h2>
-              <p class="title">Designer</p>
-              <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+              <p class="title">The funny one</p>
+              <p></p>
               <p>lawza02@gmail.com</p>
               <a class ="button" href ="https://stark-beach-02554.herokuapp.com/">MyProfile</a>
               <p></p>
@@ -61,6 +61,8 @@
       </div>
 
     <div class="about">Om oss</div>
-    <div class="AboutInfo">Vi är grupp på tre som</div>
+    <div class="AboutInfo">Vi är en grupp på tre som är ivriga att lära oss programmering</div>
+
+    
 </body>
 </html>
