--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div class="logo">
+    <header class="logo">
         <h1 class="logotext">Team-ICE</h1>
-    </div>
+    </header>
 
 
     <div class="row">
@@ -64,9 +64,9 @@
         </div>
     </div>
 
-    <div class="about">Om oss</div>
-    <div class="AboutInfo">Vi är en grupp på tre som är ivriga att lära oss programmering</div>
-
+    <footer class="about">Om oss
+    <div class="AboutInfo">We are a group of three that are eager to learn programming</div>
+    </footer>
 
 </body>
 
