used express and made the code easier to read

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -19,7 +19,7 @@
     <div class="row">
         <div class="column">
             <div class="card">
-                <img src="johan" alt="Johan" style="width:100%">
+                <img src="Image/selfie.jpg" alt="Johan" style="width:100%">
                 <div class="container">
                     <h2>Johan Klausen</h2>
                     <p class="title">The oldest</p>
@@ -34,7 +34,7 @@
 
         <div class="column">
             <div class="card">
-                <img src="vigor1" alt="Vigor" style="width:100%">
+                <img src="Image/vigor1.jpg" alt="Vigor" style="width:100%">
 
                 <div class="container">
                     <h2>Vigor Lundkvist</h2>
@@ -50,7 +50,7 @@
 
         <div class="column">
             <div class="card">
-                <img src="lawe" alt="John" style="width:100%">
+                <img src="Image/lawe.jpg" alt="John" style="width:100%">
                 <div class="container">
                     <h2>Lawe Zangena</h2>
                     <p class="title">The funny one</p>
