added a about us and contact info

--- a/public/index.html
+++ b/public/index.html
@@ -72,12 +72,12 @@
     </div>
 
     <div id="about">About us
-    <div class="AboutInfo">We are a group of three that are eager to learn programming <br> <br>Here is some work that we have done together <a href="https://github.com/Vigoliet/Team-Ice.git">Github</a> </div>
-    
+    <div class="AboutInfo">We are a group of three that are eager to learn programming <br>
+    <br>Here is some work that we have done together <a href="https://github.com/Vigoliet/Team-Ice.git">Github</a> </div>
     </div>
 
-    <div id="Contact">
-        <p>här finns all info</p>
+    <div id="Contact">Here is our contact info
+        <p class= "contactinfo"></p>
     </div>
       
     <footer>
