fixed some bugs and the contact box

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         <li><a href="#logotext">Team-ICE</a></li>
         <li><a href="#about">About us</a></li>
         <li><a href="#Contact">Contact</a></li>
-        
-      </ul>
+
+    </ul>
 
     <div class="row">
         <div class="column">
@@ -32,7 +32,7 @@
                     <p class="title">The oldest</p>
                     <p></p>
                     <p>klausenjohan23@gmail.com</p>
-                    <a href ="https://github.com/JohanK01"><i class="fa fa-github" style="font-size:36px"></i></a>
+                    <a href="https://github.com/JohanK01"><i class="fa fa-github" style="font-size:36px"></i></a>
                     <a class="button" href="https://serene-plains-54676.herokuapp.com/">MyProfile</a>
                     <p></p>
                 </div>
@@ -48,7 +48,7 @@
                     <p class="title">The smartest</p>
                     <p></p>
                     <p>vigor.lunkvist@live.se</p>
-                    <a href ="https://github.com/Vigoliet"><i class="fa fa-github" style="font-size:36px"></i></a>
+                    <a href="https://github.com/Vigoliet"><i class="fa fa-github" style="font-size:36px"></i></a>
                     <a class="button" href="https://desolate-tor-71624.herokuapp.com/">MyProfile</a>
                     <p></p>
                 </div>
@@ -63,25 +63,32 @@
                     <p class="title">The funny one</p>
                     <p></p>
                     <p>lawza02@gmail.com</p>
-                    <a href ="https://github.com/Lawe02"><i class="fa fa-github" style="font-size:36px"></i></a>
+                    <a href="https://github.com/Lawe02"><i class="fa fa-github" style="font-size:36px"></i></a>
                     <a class="button" href="https://stark-beach-02554.herokuapp.com/">MyProfile</a>
                     <p></p>
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="space"></div>
     <div id="about">About us
-    <div class="AboutInfo">We are a group of three that are eager to learn programming <br>
-    <br>Here is some work that we have done together <a href="https://github.com/Vigoliet/Team-Ice.git">Github</a> </div>
+        <p class="AboutInfo">We are a group of three that are eager to learn programming,
+            we are currently learning c#, javascript, css and html <br>
+            <br>Here is some work that we have done together <a
+                href="https://github.com/Vigoliet/Team-Ice.git">Github</a> </p>
+    </div>
+    <div class="space"></div>
+    <div id="Contact">Here is our contact info
+        <p class="contactinfo">Johan Klausen email: klausenjohan23@gmail.com
+            <br> <br>Vigor Lundkvist email: Vigor.lundkvist@live.se
+            <br> <br>Lawe Zangena email: lawza02@gmail.com
+        </p>
     </div>
 
-    <div id="Contact">Here is our contact info
-        <p class= "contactinfo"></p>
-    </div>
-      
+    <div class="space"></div>
+
     <footer>
-        <p></p>
+        <p>Skogås Kvartettvägen 2-6, 142 63 Trångsund</p>
     </footer>
 
 </body>
